manifests/cluster-addons/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: bazarr
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: bazarr
          image: ghcr.io/home-operations/bazarr:1.5.6@sha256:79fc37491f55c7e24427bcd669bce3df2d7415ca432a47ce9d53cc5988af8411
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 6767
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 6767
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          startupProbe:
            tcpSocket:
              port: 6767
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: tmp
              mountPath: /tmp
      securityContext:
        fsGroup: 65534
        runAsUser: 65534
        runAsGroup: 65534
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups:
          - 65534
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config
        - name: media
          persistentVolumeClaim:
            claimName: bazarr-media
        - name: tmp
          emptyDir: {}
