manifests/cluster-addons/bazarr/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: bazarr
  namespace: bazarr
spec:
  endpointSelector: {}

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tailscale
            tailscale.com/parent-resource: bazarr
            tailscale.com/parent-resource-ns: bazarr
      toPorts:
        - ports:
            - port: '6767'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: radarr
            app.kubernetes.io/name: radarr
      toPorts:
        - ports:
            - port: '7878'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: sonarr
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: '8989'
              protocol: TCP

    # TODO: add
    #   - toFQDNs:
    - toPorts:
        - ports:
            - port: '443'
              protocol: TCP
